fix: added padding right to info h5 on mobile view

--- a/styles.css
+++ b/styles.css
@@ -282,6 +282,7 @@ a {
 
   .info h5 {
     max-width: 82%;
+    padding-right: 10px;
   }
 
   .logos-slide img {
